[tint][build] Generate benchmarks for GN and Bazel
These were not emitted, or were emitted incorrectly.

Aside from fuzzers, CMake, GN and Bazel now all generate the same executable, library, test and benchmark targets.

Change-Id: I88c115d4fb974755fc7c476694f4ef79d6e18e49

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -25,7 +25,7 @@ group("all") {
     "src/tint/fuzzers",
   ]
   if (tint_build_unittests) {
-    deps += [ "src/tint/cmd/test" ]
+    deps += [ "src/tint/cmd/test:test_cmd" ]
   }
   if (dawn_standalone) {
     deps += [
