--- a/scripts/tint_overrides_with_defaults.gni
+++ b/scripts/tint_overrides_with_defaults.gni
@@ -87,6 +87,11 @@ declare_args() {
     tint_build_unittests = true
   }
 
+  # Build benchmarks
+  if (!defined(tint_build_benchmarks)) {
+    tint_build_benchmarks = true
+  }
+
   # TODO(crbug.com/dawn/1704): Remove when chromium_experimental_pixel_local is production-ready
   if (!defined(tint_enable_pixel_local_extension)) {
     tint_enable_pixel_local_extension = false
