Use the metal sdk to compile metal shaders
Change-Id: If85b92f787195771fa8a5a5aca0fae2344b4e952

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -617,6 +617,8 @@ source_set("sources") {
       "metal/Forward.h",
       "metal/PipelineLayoutMTL.h",
       "metal/PipelineLayoutMTL.mm",
+      "metal/Process.h",
+      "metal/Process.mm",
       "metal/QuerySetMTL.h",
       "metal/QuerySetMTL.mm",
       "metal/QueueMTL.h",
