[ir][spirv-writer] Emit shader IO without structs
Some implementations cannot handle built-ins inside structures, so
emit every IO variables as a separate module-scope variable instead.

Adds an IOVar instruction which adds a shader IO attributes field on
top of the core Var instruction.

Bug: tint:1906
Change-Id: Ic2508ceaa16ada377ebcc154c6fcb1b91c09350e

--- a/src/tint/lang/spirv/ir/BUILD.bazel
+++ b/src/tint/lang/spirv/ir/BUILD.bazel
@@ -30,14 +30,17 @@ cc_library(
     "function.cc",
     "intrinsic.cc",
     "intrinsic_call.cc",
+    "io_var.cc",
   ],
   hdrs = [
     "builtin_call.h",
     "function.h",
     "intrinsic.h",
     "intrinsic_call.h",
+    "io_var.h",
   ],
   deps = [
+    "//src/tint/api/common",
     "//src/tint/lang/core",
     "//src/tint/lang/core/constant",
     "//src/tint/lang/core/intrinsic",
@@ -49,6 +52,7 @@ cc_library(
     "//src/tint/utils/macros",
     "//src/tint/utils/math",
     "//src/tint/utils/memory",
+    "//src/tint/utils/reflection",
     "//src/tint/utils/result",
     "//src/tint/utils/rtti",
     "//src/tint/utils/text",
