[tint][utils] Add a TINT_STATIC_INIT() helper
TODO: Docs, test.
Change-Id: I14dcebbe442f10345ae0569429cf03f349a074e6

--- a/src/tint/utils/macros/BUILD.gn
+++ b/src/tint/utils/macros/BUILD.gn
@@ -37,6 +37,7 @@ libtint_source_set("macros") {
     "foreach.h",
     "macros.cc",
     "scoped_assignment.h",
+    "static_init.h",
   ]
   deps = []
 }
