[tint] Add fuzzer target support to 'gen build'
Adds two new target types: 'fuzz' and 'fuzz_cmd'.
Follows the same patterns as test and bench targets.

Change-Id: I3d3fb758b8cff32b06886503e52bd43ea95733e2

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -23,6 +23,7 @@ group("all") {
     "src/dawn/tests",
     "src/tint/api",
     "src/tint/fuzzers",
+    "src/tint/cmd/fuzz/wgsl",
   ]
   if (tint_build_unittests) {
     deps += [ "src/tint/cmd/test" ]
