[tint] Add fuzzer target support to 'gen build'
Adds two new target types: 'fuzz' and 'fuzz_cmd'.
Follows the same patterns as test and bench targets.

Change-Id: I3d3fb758b8cff32b06886503e52bd43ea95733e2

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -19,6 +19,7 @@ group("fuzzers") {
   testonly = true
   deps = [
     "src/dawn/fuzzers",
+    "src/tint/cmd/fuzz/wgsl",
     "src/tint/fuzzers",
   ]
 }
