--- a/src/tint/lang/spirv/writer/common/BUILD.gn
+++ b/src/tint/lang/spirv/writer/common/BUILD.gn
@@ -41,12 +41,13 @@ if (tint_build_spv_writer) {
       "module.h",
       "operand.cc",
       "operand.h",
+      "option_builder.cc",
+      "option_builder.h",
       "options.h",
     ]
     deps = [
       "${tint_src_dir}/api/common",
       "${tint_src_dir}/api/options",
-      "${tint_src_dir}/lang/core",
       "${tint_src_dir}/utils/containers",
       "${tint_src_dir}/utils/ice",
       "${tint_src_dir}/utils/macros",
@@ -79,7 +80,6 @@ if (tint_build_unittests) {
       deps = [
         "${tint_src_dir}:gmock_and_gtest",
         "${tint_src_dir}/api/common",
-        "${tint_src_dir}/api/options",
         "${tint_src_dir}/lang/core",
         "${tint_src_dir}/lang/core/constant",
         "${tint_src_dir}/lang/core/intrinsic",
